# cal-bc

./: .dockerignore  .env.example  .git-authors  .gitignore  Dockerfile  Makefile  README.md  main.py  manage.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker.yml  pytest.yml  ruff.yml  terraform-apply.yml  terraform-plan.yml
CalBC-workflow/: BCA.py  README.md  Running Widgets.ipynb  RunningWidget_Voilatest.ipynb  Running_Widgets.ipynb  Untitled.ipynb  modelinputs_annual_person_trip.py  modelinputs_ramp_arterial.py  modelinputs_widgets-Cathy.py  modelinputs_widgets.py  projectinfo_widgets.py  pyproject.toml  pyproject.yaml  travel_time.py  widgets_helper.py
CalBC-workflow /: Parameter.py  Running Widgets.ipynb  Widget.ipynb  modelinputs_widgets.py  parameter.py  parameters.py  project_inputs.py  projectinfo_widgets.py  running_widgets.ipynb  travel_time.py  widgets_helper.py  widgets_inputs.py
CalBC-workflow/Archive/: test_widgets.py
CalBC-workflow_test/: Running Widgets.ipynb  modelinputs_widgets.py  projectinfo_widgets.py  travel_time.py
iac/: .terraform.lock.hcl  jobs.tf  provider.tf  secrets.tf  service.tf  sql.tf  variables.tf
src/cal_bc/: app.py  asgi.py  calculator.py  downloader.py  parser.py  routing.py  settings.py  tasks.py  urls.py  wsgi.py
src/cal_bc/landings/: apps.py  urls.py
src/cal_bc/models/: admin.py  apps.py  urls.py
src/cal_bc/models/forms/: model.py
src/cal_bc/models/migrations/: 0001_initial.py  0002_create_model.py  0003_create_version.py  0004_create_section.py  0005_create_subsection.py  0006_create_group.py  0007_create_row.py  0008_create_column_group.py  0008_create_field.py  0009_create_column.py  0009_create_value.py  0010_create_field.py  0010_subsection_description.py  0011_create_value.py  0011_group_description.py  0012_create_field_column.py  0013_subsection_description.py  0014_group_description.py  0015_row_guide.py  0016_subsection_guide.py
src/cal_bc/models/models/: model.py
src/cal_bc/models/views/: model.py
src/cal_bc/projects/: admin.py  apps.py  consumers.py  tasks.py  urls.py  views.py
src/cal_bc/projects/forms/: model_section.py  project.py  project_field.py
src/cal_bc/projects/migrations/: 0001_create_models.py  0001_initial.py  0002_create_project.py  0002_create_projects.py  0003_add_project_district.py  0003_create_value.py  0003_project_construction_period_length_and_more.py  0004_create_model_section.py  0004_modelversion.py  0004_project_dates.py  0005_create_model_section_field.py  0005_projects_modelversion.py  0006_create_project_field.py  0006_modelversions_url.py
src/cal_bc/projects/models/: model.py  model_section.py  model_section_field.py  model_version.py  project.py  project_field.py
src/cal_bc/projects/templates/: _footer.html  _form_header_nav.html  _header_nav.html  _statewide_header.html  _user_menu.html  base.html  landings_base.html
src/cal_bc/projects/templatetags/: get_class.py
src/cal_bc/projects/views/: project.py  project_benefit.py  project_download.py  (+2 more)
src/cal_bc_calculator/: app.py  calculator.py  downloader.py  functions.py  versions.py
src/calbc/: functions.py  parser.py
src/styles/: main.css  typography.css
test-input/: input-instructions.md
test-output/: output-instructions.md
testing-code/: Testcode.ipynb  Testcode_01_24.ipynb  Testcode_allmodels.ipynb  formula_test.ipynb  template_generation.ipynb  template_generation.md  testcode-instructions.md
tests/: test_app.py  test_calculation.py  test_completion.py  test_functions.py
tests/cal_bc/: test_calculation.py  test_calculator.py  test_projects.py
tests/cal_bc/models/: test_model.py  test_model_section.py  test_model_section_field.py  test_model_version.py  test_project.py  test_project_field.py
tests/cal_bc/system/: test_model_admin.py  test_project_lifecycle.py
tests/cal_bc/tasks/: test_project_tasks.py
tests/cal_bc/views/: test_landings.py  test_landings_views.py  test_model_views.py  test_models.py  test_project_download_views.py  test_project_sections.py  test_project_subsection_views.py  test_project_views.py  test_projects.py
tests/cal_bc_calculator/: test_calculator.py
tests/cassettes/test_app/: TestApp.test_complete.yaml  TestApp.test_download_specific_version.yaml  TestApp.test_evaluate.yaml
tests/xlcalculator/: test_functions.py
(+15 files in other folders)
