[project]
name = "cal-bc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dj-svg>=0.3.1",
    "django>=5.2.7",
    "django-azure-auth>=2.4.0",
    "django-environ>=0.12.0",
    "django-tailwind-cli>=4.4.2",
    "django-widget-tweaks>=1.5.0",
    "platformdirs>=4.4.0",
    "psycopg2-binary>=2.9.11",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
    "xlcalculator",
]

[project.scripts]
cal-bc = "cal_bc:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.sources]
xlcalculator = { git = "https://github.com/cal-itp/xlcalculator", branch = "mov/caltrans-calculations" }

[dependency-groups]
dev = [
    "django-extensions>=4.1",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "pytest-playwright>=0.7.1",
    "ruff>=0.13.2",
    "unbrowsed>=0.1.0a22",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cal_bc.settings"
